--- a/src/pages/IdeaOffer/IdeaOffer.css
+++ b/src/pages/IdeaOffer/IdeaOffer.css
@@ -95,26 +95,34 @@
     /* border: 1px solid black; */
 }
 
-.ideaOfferPage .contentsBtn button {
-    background-color: #34495e;
-    color: white;
-    font-weight: bold;
+.ideaOfferPage .contentsBtn a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     width: 130px;
     height: 40px;
+
+    background-color: #34495e;
+    color: white;
+
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+
     cursor: pointer;
 
     border-radius: 5px;
     border: none;
 }
 
-.ideaOfferPage .contentsBtn button:hover {
+.ideaOfferPage .contentsBtn a:hover {
     background-color: #dbdbdb;
     color: #333;
     font-weight: bold;
 }
 
-.ideaOfferPage .contentsBtn button:nth-child(2) {
+.ideaOfferPage .contentsBtn a:nth-child(2) {
     margin-left: 10px;
 }
 
