--- a/src/pages/Industry/Industry.css
+++ b/src/pages/Industry/Industry.css
@@ -6,7 +6,7 @@
     width: 1200px;
     height: 100%;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .industryBody .contents {
