--- a/src/pages/FieldSensor/FieldSensor.css
+++ b/src/pages/FieldSensor/FieldSensor.css
@@ -175,10 +175,15 @@
 }
 
 .sight .sightScreen {
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+
     width: 73%;
     height: 100%;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    border: 1px solid #dbdbdb;
 }
 
 .sight .sightState {
